syntax = "proto3";

message IpfsMetadata {
  // We version the data structured used to represent proposal metadata. Each
  // proposal type has their own metadata and versioning that we can change
  // independently of other proposal types.
  string version = 1;
  IpfsContentType type = 2;
  string id = 3;
  string name = 4;
}

enum IpfsContentType {
  UNKNOWN = 0;
  EDIT = 1;
  CREATE_SPACE = 2;
  ADD_SUBSPACE = 3;
  REMOVE_SUBSPACE = 4;
  ADD_EDITOR = 5;
  REMOVE_EDITOR = 6;
  ADD_MEMBER = 7;
  REMOVE_MEMBER = 8;
}

message Edit {
  string version = 1;
  IpfsContentType type = 2;
  string id = 3;
  string name = 4;
  repeated Op ops = 5;
  repeated string authors = 6;
}

message Op {
  OpType opType = 1;
  Payload payload = 2;
}

message Payload {
  bytes entityId = 1;
  bytes attributeId = 2;
  Value value = 3;
}

message Value {
  ValueType type = 1;
  string value = 2;
}

enum OpType {
  NONE = 0;
  SET_TRIPLE = 1;
  DELETE_TRIPLE = 2;
}

enum ValueType {
  NULL = 0;
  TEXT = 1;
  NUMBER = 2;
  ENTITY = 3;
  COLLECTION = 4;
  CHECKBOX = 5;
  URL = 6;
  TIME = 7;
  GEO_LOCATION = 8;
}

message Membership {
  string version = 1;
  IpfsContentType type = 2;
  string id = 3;
  string name = 4;
  string userAddress = 5;
}

message Subspace {
  string version = 1;
  IpfsContentType type = 2;
  string id = 3;
  string name = 4;
  string subspace = 5;
}

message Import {
  string previousNetwork = 1;
  string previousAddress = 2;
  repeated string edits = 3;
}
